# opengl_window_windows_port

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  opengl_window_windows_port.sln
.github/workflows/: clang-format-check.yml
opengl_window_windows_setup/: audio.cpp  audio.h  opengl_window_windows_setup.cpp  opengl_window_windows_setup.vcxproj  opengl_window_windows_setup.vcxproj.filters
opengl_window_windows_setup/shader/: shader.frag  shader.vert
src/: audio.cpp  audio.hpp  opengl_window.cpp  opengl_window_windows_setup.vcxproj  opengl_window_windows_setup.vcxproj.filters
